<resources>
    <string name="app_name">RunTime</string>
    <string name="chosenLocation">Chosen location</string>
    <string name="event_date">Date:</string>
    <string name="event_time">Time:</string>
    <string name="event_location">Location:</string>
    <string name="number_of_runners">Runners joined</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="event_title">Set event details</string>
    <string name="set_location">Set location</string>
    <string name="invite_friends_btn">Invite Friends</string>
    <string name="done_btn">Done</string>
    <string name="activity_level">Choose event dificulty</string>
    <string name="easy">Easy</string>
    <string name="expert">Expert</string>
    <string name="medium">Medium</string>
    <string name="event_status">Event status:</string>
    <string name="public_event">Public</string>
    <string name="private_event">"Private "</string>
    <string name="all_fields">Please fill all fields</string>
    <string name="new_event_snack_bar">New event successfully created!</string>
    <string name="join_btn">Join!</string>
    <string name="cancel_join_btn">Cancel</string>
    <string name="events_recycler_title">Upcoming events near you</string>
    <string name="accept">Accept</string>
    <string name="remove">Remove</string>
    <string name="join">Join</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="sent_request">Sent Request</string>
    <string name="invitations">Invitations</string>
    <string name="upcoming">Upcoming</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="find_new_runners">Find New Runners</string>
    <string name="meters_away">meters away</string>
    <string name="runners">Runners</string>
    <string name="accepted_your_request">accepted your friend request</string>
    <string name="send_them_a_message">Send them a message!</string>
    <string name="manager">Manager</string>
    <string name="managed">My events</string>
    <string name="edit">Edit</string>
    <string name="mutual">Mutual Friends</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="insert_text">enter text</string>

    <string name="my_friends">My friends</string>
    <string name="invite">"Invite "</string>
    <string name="un_invite">Un invite</string>

    <string name="is_sure_cancel_event">Cancel this event?</string>
    <string name="cancel_event">Cancel event</string>
    <string name="do_not_cancel">Don\'t cancel</string>
    <string name="event_canceled">Event is canceled</string>
    <string name="the_event">The event</string>
    <string name="on_date">on</string>
    <string name="on_time">on</string>
    <string name="is_canceled">is canceled</string>
    <string name="is_sure_delete_friend">Remove</string>
    <string name="from_friend_list">from your friends list?</string>
    <string name="friend_successfuly_removed">Friend successfuly removed</string>
    <string name="event_canceled_successfuly">Event Canceled</string>
    <string name="new_friend_request">New friend request!</string>
    <string name="do_not_keep_wait">Don\'t keep them waiting</string>
    <string name="is_sure_cancel_participants">Cancel your participation in this event?</string>
    <string name="cancel_participation">Cancel participation</string>
    <string name="participation_removed">Participation removed</string>
    <string name="added_to_friends">was added to your friends list</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="sign_in">Sign in</string>
    <string name="see_members">See members</string>
    <string name="welcome">Welcome to runtime!</string>
    <string name="find_someone">Find someone</string>
    <string name="to_run_with">to run with</string>
    <string name="create_profile">Create profile</string>
    <string name="create1">Create profile and</string>
    <string name="create2">choose your running partner</string>
    <string name="create3">preferences</string>
    <string name="friends1">Find new friends</string>
    <string name="friend2">Find new running partners</string>
    <string name="friend3">around you</string>
    <string name="event1">Join running events</string>
    <string name="event2">Join upcoming events near you</string>
    <string name="event3">or create your own events!</string>
    <string name="get_started">Get started!</string>
    <string name="create_new_event">Create New Event</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="running_level">Running level:</string>
    <string name="done">Done</string>
    <string name="enter_address">Enter address</string>
    <string name="confirm_location">Confirm location</string>
    <string name="type">Please type valid address</string>
    <string name="no_friends">No friends to show</string>
    <string name="sign_up">Sign up</string>
    <string name="registration_details">Registration Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="preferred_running_partner">Preferred Running Partner</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="profile_picture">Profile picture:</string>
    <string name="gender">Gender:</string>
    <string name="birthdate">Birthdate:</string>

    <string name="both">Both</string>
    <string name="age">Age:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="required_field">Required field</string>
    <string name="email_badly_formatted">Email badly formatted</string>
    <string name="no_such_user">No user with this address</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="failed_sign_in">Failed to sign in</string>
    <string name="passwords_not_identical">Passwords not identical</string>
    <string name="password_must_be_8_letters">Password must be at least 8 letters</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="user_already_exists">User already exists</string>
    <string name="failed_to_sign_up">Failed to sign up</string>
    <string name="fill_all_details">Please fill all details</string>
    <string name="are_you_coming_for_a_run">Are you coming for a run?</string>
    <string name="find_runners_around_you">Find runners around you</string>
    <string name="find_event_around_you">Find event around you</string>

    <string name="my_profile">My profile</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit profile</string>
    <string name="full_name">Full Name:</string>

    <string name="enter_full_name">Enter full name</string>
    <string name="edit_preferences">Edit preferences</string>
    <string name="sign_out">Sign out</string>
    <string name="menu">Menu</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>

    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="edit_name">Edit name</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="no_location_detected">No location detected</string>
    <string name="new_invitation">New invitation to running event!</string>
    <string name="see_in_invitations">See it on your invitations</string>


</resources>
