<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:layout_marginVertical="5dp"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="1dp"
    app:cardElevation="0.7dp"
    app:contentPadding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImageRecyclerCell"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/gray"/>

        <TextView
            android:layout_width="96dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textSize="18sp"
            android:text="tal"
            android:textColor="@color/lightBlue2"
            android:id="@+id/userNameTVRecyclerCell"/>

        <TextView
            android:layout_width="96dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:text="@string/sent_request"
            android:visibility="gone"
            android:textColor="@color/gray"
            android:id="@+id/requestSentTV"/>
        <ToggleButton
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:textOn="@string/cancel"
            android:textOff="@string/add"
            android:checked="false"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:background="@drawable/toggle_btn_backgroung"
            android:layout_marginTop="10dp"
            android:id="@+id/addFriendBtn"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>